Fixed landing button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 14 2020 09:01:29 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 14 2020 10:29:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f768c7b6ba554d1cbba98bb" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="text-block-23">You&#x27;ve found</div>
           <h1 class="hero-header landing">The Best Publishing Platform Ever.</h1>
           <div class="hero-paragraph">Jraft brings real-time collaboration to writers, editors, and designers to build publications people want to discover. Whether you&#x27;re a blogger or a big city publisher, Jraft is the platform to showcase your best work.</div>
-          <div class="div-block"><a href="#" class="button square-blackbg w-button">Join Beta</a>
+          <div class="div-block"><a href="#Footer-CTA" class="button square-blackbg w-button">Join Beta</a>
             <div class="launching-soon">Launching Soon</div>
           </div>
         </div>
