Fixed hosting photos

--- a/hosting.html
+++ b/hosting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Wed Oct 14 2020 10:29:50 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Oct 15 2020 02:20:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0308edc68c3868b89a7" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -176,7 +176,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </div>
     <div class="feature-detail-div">
       <a href="create.html" class="div-block-134 w-inline-block">
-        <div class="photo-class"><img src="images/Fake-Newspaper-Logo.svg" loading="lazy" width="800" alt="" class="image-21"></div>
+        <div class="photo-class"><img src="images/Hosting-Comp-1.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" srcset="images/Hosting-Comp-1-p-500.jpeg 500w, images/Hosting-Comp-1-p-800.jpeg 800w, images/Hosting-Comp-1-p-1080.jpeg 1080w, images/Hosting-Comp-1.jpg 1600w" alt="Jraft&#x27;s collaborative editing software" class="image-21"></div>
         <div class="div-block-135">
           <h2 class="class-1">Writers &amp; Editors</h2>
           <div class="class-2">Publish and style beautiful articles that stand out in minutes from the Editor, without relying on developers.</div>
