--- a/engagement.html
+++ b/engagement.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <!--  Last Published: Sat Oct 17 2020 01:57:27 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f6dd0efd274a405eb701b00" data-wf-site="5f475d95bc662b718071304a" lang="en">
+<html data-wf-page="5f6dd0dc379bd728fc08022f" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Manage | Jraft</title>
-  <meta content="Plan, track, and manage your editorial workflow in Jraft. Customize your workflow, collaborate, and publish create content." name="description">
-  <meta content="Manage | Jraft" property="og:title">
-  <meta content="Plan, track, and manage your editorial workflow in Jraft. Customize your workflow, collaborate, and publish create content." property="og:description">
+  <title>Optimise your engagement and ad revenue | Jraft</title>
+  <meta content="Increase your readership by 20% on Jraft&#x27;s CMS. Jraft&#x27;s myriad of performance and engagement features ensure more readers discover, read, and share your content." name="description">
+  <meta content="Optimise your engagement and ad revenue | Jraft" property="og:title">
+  <meta content="Increase your readership by 20% on Jraft&#x27;s CMS. Jraft&#x27;s myriad of performance and engagement features ensure more readers discover, read, and share your content." property="og:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1598072047/1500x500" property="og:image">
-  <meta content="Manage | Jraft" property="twitter:title">
-  <meta content="Plan, track, and manage your editorial workflow in Jraft. Customize your workflow, collaborate, and publish create content." property="twitter:description">
+  <meta content="Optimise your engagement and ad revenue | Jraft" property="twitter:title">
+  <meta content="Increase your readership by 20% on Jraft&#x27;s CMS. Jraft&#x27;s myriad of performance and engagement features ensure more readers discover, read, and share your content." property="twitter:description">
   <meta content="https://pbs.twimg.com/profile_banners/1227448256613027840/1598072047/1500x500" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -21,7 +21,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://tryjraft.com/manage" rel="canonical">
+  <link href="https://tryjraft.com/engagement" rel="canonical">
   <!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -40,7 +40,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build.html" class="dropdown-link w-dropdown-link">Builder</a><a href="create.html" class="dropdown-link w-dropdown-link">Editor</a><a href="manage.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Workflow</a><a href="engagement.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="build.html" class="dropdown-link w-dropdown-link">Builder</a><a href="create.html" class="dropdown-link w-dropdown-link">Editor</a><a href="manage.html" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Engage &amp; Earn</a><a href="hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
@@ -79,43 +79,74 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <a href="#Footer-CTA" class="button stickybutton w-inline-block">
     <div class="text-block-17">Join Beta</div>
   </a>
-  <div data-w-id="45a626de-ca0b-2563-74be-f2b582109958" class="feature-section hero manager">
-    <div class="feature-bounding-box manager">
-      <div class="feature-hero-text-parent manager">
-        <h1 class="build-horiz-text _1"><span class="emphasise title">Enough of this sheet.</span> Organise and manage your editorial <span class="emphasise title">2x faster.</span></h1>
-        <div class="text-block-31">Get rid of out-of-date spreadsheets for managing your publishing team. <span class="emphasise">Jraft is your always in sync, single source of truth,</span> keeping your editorial process organised and flowing.</div>
+  <div data-w-id="45a626de-ca0b-2563-74be-f2b582109958" class="feature-section hero">
+    <div class="feature-bounding-box">
+      <div class="feature-hero-text-parent engagement">
+        <h1 class="build-horiz-text _1">Engagement, <span class="text-span-4">Supercharged.</span> Ad revenue, <span class="text-span-5">Maximised.</span></h1>
+        <div class="text-block-31"><span class="emphasise">Jraft maximises reader engagement</span> (and your ad revenue) through a variety of class-leading features. From infinite scroll to a comment system used by the largest of publications, <span class="emphasise">Jraft grows your readership.</span></div>
         <div class="div-block-1372"><a href="#Footer-CTA" class="button square-blackbg w-button">Join Beta</a>
           <div class="launching-soon">Launching Soon</div>
         </div>
       </div>
-      <div class="feature-hero-photo-parent manager"><img src="images/Manager-Comp.png" loading="eager" width="471.5" sizes="(max-width: 479px) 93vw, (max-width: 767px) 92vw, (max-width: 991px) 59vw, 46vw" srcset="images/Manager-Comp-p-500.png 500w, images/Manager-Comp-p-800.png 800w, images/Manager-Comp.png 943w" alt="Jraft&#x27;s management features overlaid over Google Docs" class="image-53"></div>
+      <div class="feature-hero-photo-parent engagement"><img src="images/Integrations_1.svg" loading="eager" width="471.5" alt="" class="image-53"></div>
     </div>
   </div>
-  <div class="feature-section _5">
-    <div class="feature-bounding-box _4">
-      <div class="div-block-1403">
-        <h2 class="heading-8 manager-1">Trello style article management</h2>
-        <div class="text-block-46 manager">Your publication is a factory of content, and your CMS should provide you the tools to manage it as such. With Jraft, all unpublished articles are grouped into drafts, reviewed, and scheduled on a familiar to use kanban board so you can always keep track of article progress and who&#x27;s responsible for what.</div>
-      </div>
-      <div data-w-id="609e9c2b-f3cf-991f-0436-7c730b6fc04e" class="div-block-1404">
-        <div class="div-block-1413">
-          <div class="w-embed"><video src="https://clever-rosalind-0fadb6.netlify.app/videos/manager.mp4" width="100%" autoplay="" playsinline="" loop="" muted=""></video></div>
+  <div class="feature-section _2">
+    <div class="feature-bounding-box _2">
+      <div data-w-id="72bec4c2-9dde-a8e3-6e23-6347aed26b4c" style="opacity:0" class="builder-mobile-stat-parent">
+        <div class="div-block-1381">
+          <div class="text-block-32">53%</div>
+          <div class="text-block-33">of mobile users <span class="emphasise">don&#x27;t read an article</span> that takes more than 3 seconds to load</div>
+          <div class="text-block-34">Source: Google Industry Benchmarks</div>
         </div>
-        <div class="photo-bg-colour manager-1"></div>
+      </div>
+      <div class="div-block-1375">
+        <div style="opacity:0" class="comparision-parent wp">
+          <div class="div-block-1380">
+            <div class="div-block-1378"><img src="images/word-press-logo.svg" loading="lazy" alt="" class="image-44"></div>
+            <div class="div-block-1379">
+              <div class="text-block-36">14 <span class="text-span-7">seconds</span></div>
+              <div class="text-block-37">Average publication load time</div>
+            </div>
+          </div>
+        </div>
+        <div style="opacity:0" class="comparision-parent jraft">
+          <div class="div-block-1380">
+            <div class="div-block-1378"><img src="images/Jraft-Logomark-White.svg" loading="lazy" alt="Jraft&#x27;s logomark in white" class="image-44"></div>
+            <div class="div-block-1379">
+              <div class="text-block-36 white">2.8 <span class="text-span-7">seconds</span></div>
+              <div class="text-block-37 white">Average Jraft load time</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <div class="feature-section _5">
     <div class="feature-bounding-box _4">
       <div class="div-block-1403 _2">
-        <h2 class="heading-8 manager-2">Schedule with context on a full page calendar</h2>
-        <div class="text-block-46 scheduler">Scheduling content without context of your previous and future content pipeline is like driving blind. Jraft shows all your articles on calendar, allowing you to see everything published in the past and what is planned, helping you strategise when and what you should publish in the future.<span class="emphasise"></span></div>
+        <h2 class="heading-8 builder-infinity-scroll">Increase engagement with infinity scroll.</h2>
+        <div class="text-block-46 _2">Today&#x27;s user is trained on infinite scroll from social feeds like Instagram — every time a user clicks a button to read another article, you risk losing them. Jraft implements infinity scroll on all your articles, <span class="emphasise">increasing page views by an average of 20%, letting you get better results on fewer ads.</span></div>
       </div>
-      <div data-w-id="91cacccc-4518-6f1b-c957-f6ca096c9673" class="div-block-1404 manager-2">
+      <div data-w-id="965c6f23-f9d1-1e68-5f4d-9a76736862f1" class="div-block-1404">
         <div class="div-block-1413">
-          <div class="w-embed"><video src="https://clever-rosalind-0fadb6.netlify.app/videos/scheduler.mp4" width="100%" autoplay="" playsinline="" loop="" muted=""></video></div>
+          <div class="w-embed"><video src="https://clever-rosalind-0fadb6.netlify.app/videos/infinite_scroll.mp4" width="100%" autoplay="" playsinline="" loop="" muted=""></video></div>
         </div>
-        <div class="photo-bg-colour manager-2"></div>
+        <div class="photo-bg-colour builder-2"></div>
+      </div>
+    </div>
+  </div>
+  <div class="feature-section _5">
+    <div class="feature-bounding-box engagement-ads">
+      <div class="div-block-1403 _2">
+        <h2 class="heading-8 builder-infinity-scroll">Integrates with your favourite ad provider</h2>
+        <div class="text-block-46 _2">Integrating with AdSense is a painless experience. Simply add your AdSense code and ads will automatically start appearing on your publication. Zero code. Zero friction. Running a custom ad solution? <a href="pricing.html" class="link-6">Contact enterprise sales</a> and our team will modify Jraft to your fancy.<span class="emphasise"></span></div>
+      </div>
+      <div data-w-id="6648aad8-c635-0c6f-c230-1fb2135f86e5" class="div-block-1404">
+        <div class="div-block-1413">
+          <div class="w-embed"><video src="https://clever-rosalind-0fadb6.netlify.app/videos/infinite_scroll.mp4" width="100%" autoplay="" loop="" muted=""></video></div>
+        </div>
+        <div class="photo-bg-colour builder-2"></div>
       </div>
     </div>
   </div>
@@ -123,10 +154,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="feature-bounding-box more-features">
       <div class="div-block-1395">
         <div class="more-features-parent _2">
-          <div class="div-block-1398"><img src="images/Colour-Cards.svg" loading="lazy" alt="" class="image-50"></div>
+          <div class="div-block-1398"><img src="images/Coral-Comments.svg" loading="lazy" alt="Coral Comments Logo" class="image-50"></div>
           <div class="feature-double-text-parent">
-            <h4 class="heading-9">Article stage colour coding<br></h4>
-            <div class="text-block-43">Articles are colour coded by their stages: orange is draft, blue is &#x27;for editor review&#x27;, and green is &#x27;reviewed or published&#x27; for instant visualisation of your work pipeline.<br></div>
+            <h4 class="heading-9">Best in class comments<br></h4>
+            <div class="text-block-43">Jraft comes with <a href="https://coralproject.net/" target="_blank" class="link-5">Coral Comments</a> integrated. Coral is the go-to professional comment management platform used by major publishers like Vox Media, The Wall Street Journal, New York Mag, Mother Jones, The Washington Post, and more.<br></div>
           </div>
         </div>
         <div class="more-features-parent _2">
@@ -139,24 +170,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1395-copy">
         <div class="more-features-parent _3">
-          <div class="div-block-1407"><img src="images/events.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1407"><img src="images/images.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
-            <h4 class="heading-9">Individual desk permissions<br></h4>
-            <div class="text-block-43">In Jraft, articles are organised into ‘newsdesks’ or content categories, with their own individualised user permissions. Ensure people only edit what they should.<br></div>
+            <h4 class="heading-9">Next-gen image optimisation<br></h4>
+            <div class="text-block-43">Paying for optimisation plugins? Jraft  automatically resizes, optimises and converts all images to WebP, a next gen image format 35+% smaller than JPEG with no quality loss.<br></div>
           </div>
         </div>
         <div class="more-features-parent _3">
-          <div class="div-block-1407"><img src="images/filter--edit.svg" loading="lazy" alt=""></div>
+          <div class="div-block-1407"><img src="images/speedometer-outline.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
-            <h4 class="heading-9">Powerful search and filter<br></h4>
-            <div class="text-block-43">Have 50,000 articles? Forget fiddling around with search that misses queries or is overly complex. Jraft’s unibar search can find you anything — instantly.<br></div>
+            <h4 class="heading-9">Extreme performance<br></h4>
+            <div class="text-block-43">Jraft&#x27;s block based approach allows us to output ultra optimised code which loads 50%+ faster than the New York Times for ultimate SEO<br></div>
           </div>
         </div>
         <div class="more-features-parent _3">
           <div class="div-block-1407"><img src="images/search-circle-outline.svg" loading="lazy" alt=""></div>
           <div class="feature-triple-text-parent">
             <h4 class="heading-9">Perfect SEO — without plugins<br></h4>
-            <div class="text-block-43">Jraft has all the fundamental technical modern SEO features built in. Metadata controls, automatic XML sitemaps, RPC pings, robots.txt + more — no plugins necessary.<br></div>
+            <div class="text-block-43">Jraft has all the fundamental technical modern SEO features built in, without having to rely on third-party plugins.<br></div>
           </div>
         </div>
       </div>
@@ -189,6 +220,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="feature-bounding-box other-features-1">
     <h2 class="heading-10">All features</h2>
     <div class="div-block-1397">
+      <a href="manage.html" class="other-features-parent w-inline-block">
+        <div class="other-image-parent"><img src="images/Workflow_1.svg" loading="lazy" alt=""></div>
+        <div class="div-block-1400">
+          <h4 class="heading-11">Workflow</h4>
+          <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
+        </div>
+      </a>
       <a href="build.html" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
@@ -201,13 +239,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1400">
           <h4 class="heading-11">Write</h4>
           <div class="text-block-45">Write articles collaboratively and visually.</div>
-        </div>
-      </a>
-      <a href="engagement.html" class="other-features-parent w-inline-block">
-        <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
-        <div class="div-block-1400">
-          <h4 class="heading-11">Engagement</h4>
-          <div class="text-block-45">Maximise your readership, monetise your audience.</div>
         </div>
       </a>
       <a href="hosting.html" class="other-features-parent w-inline-block">
@@ -251,10 +282,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="manage.html" aria-current="page" class="footer-text w--current">Workflow</a></li>
+            <li><a href="manage.html" class="footer-text">Workflow</a></li>
             <li><a href="create.html" class="footer-text">Editor</a></li>
             <li><a href="build.html" class="footer-text">Builder</a></li>
-            <li><a href="engagement.html" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="engagement.html" aria-current="page" class="footer-text w--current">Engage &amp; Earn</a></li>
             <li><a href="hosting.html" class="footer-text">Hosting &amp; Performance</a></li>
             <li><a href="pricing.html" class="footer-text">Pricing</a></li>
           </ul>
