--- a/create.html
+++ b/create.html
@@ -32,7 +32,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body features">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -40,15 +40,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build.html" class="dropdown-link w-dropdown-link">Builder</a><a href="create.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Editor</a><a href="manage.html" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" aria-current="page" class="dropdown-link w-dropdown-link w--current">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Why Jraft</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress.html" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix.html" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium.html" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you.html" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
-          </div><a href="pricing.html" class="nav-item w-nav-link">Pricing</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
+          </div><a href="pricing" class="nav-item w-nav-link">Pricing</a></nav>
       </div>
       <div class="div-block-1328">
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
@@ -240,7 +240,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h3 class="heading-copy">Compare Jraft with</h3>
     </div>
     <div class="div-block-13">
-      <a href="vs/wordpress.html" class="compare-with-div-link-2 w-inline-block">
+      <a href="vs/wordpress" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
           <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
@@ -249,7 +249,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="text-block-5">Open-source, but needs extensive customisation, plugins, custom development work, and ongoing maintenance.</div>
       </a>
       <div class="div-block-30"></div>
-      <a href="vs/wix.html" class="compare-with-div-link-2 w-inline-block">
+      <a href="vs/wix" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
           <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
@@ -262,28 +262,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="feature-bounding-box other-features-1">
     <h2 class="heading-10">All features</h2>
     <div class="div-block-1397">
-      <a href="manage.html" class="other-features-parent w-inline-block">
+      <a href="manage" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Workflow_1.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Workflow</h4>
           <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
         </div>
       </a>
-      <a href="build.html" class="other-features-parent w-inline-block">
+      <a href="build" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Build</h4>
           <div class="text-block-45">Design and build a performant, well designed publication, quickly.</div>
         </div>
       </a>
-      <a href="engagement.html" class="other-features-parent w-inline-block">
+      <a href="engagement" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Engagement</h4>
           <div class="text-block-45">Maximise your readership, monetise your audience.</div>
         </div>
       </a>
-      <a href="hosting.html" class="other-features-parent w-inline-block">
+      <a href="hosting" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Hosting</h4>
@@ -298,7 +298,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div>
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
-        </div><a href="pricing.html" class="button square-corners left-align w-button">View pricing</a></div>
+        </div><a href="pricing" class="button square-corners left-align w-button">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
@@ -324,12 +324,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="manage.html" class="footer-text">Workflow</a></li>
-            <li><a href="create.html" aria-current="page" class="footer-text w--current">Editor</a></li>
-            <li><a href="build.html" class="footer-text">Builder</a></li>
-            <li><a href="engagement.html" class="footer-text">Engage &amp; Earn</a></li>
-            <li><a href="hosting.html" class="footer-text">Hosting &amp; Performance</a></li>
-            <li><a href="pricing.html" class="footer-text">Pricing</a></li>
+            <li><a href="manage" class="footer-text">Workflow</a></li>
+            <li><a href="create" aria-current="page" class="footer-text w--current">Editor</a></li>
+            <li><a href="build" class="footer-text">Builder</a></li>
+            <li><a href="engagement" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="hosting" class="footer-text">Hosting &amp; Performance</a></li>
+            <li><a href="pricing" class="footer-text">Pricing</a></li>
           </ul>
         </div>
         <div class="footer-div hidden">
@@ -344,10 +344,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="vs/wordpress.html" class="footer-text">WordPress</a></li>
-            <li><a href="vs/wix.html" class="footer-text">Wix</a></li>
-            <li><a href="vs/medium.html" class="footer-text">Medium</a></li>
-            <li><a href="vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a></li>
+            <li><a href="vs/wordpress" class="footer-text">WordPress</a></li>
+            <li><a href="vs/wix" class="footer-text">Wix</a></li>
+            <li><a href="vs/medium" class="footer-text">Medium</a></li>
+            <li><a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a></li>
           </ul>
         </div>
       </div>
@@ -358,7 +358,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
 </body>
 </html>
