--- a/hosting.html
+++ b/hosting.html
@@ -32,7 +32,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body features">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -40,15 +40,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build.html" class="dropdown-link w-dropdown-link">Builder</a><a href="create.html" class="dropdown-link w-dropdown-link">Editor</a><a href="manage.html" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" aria-current="page" class="dropdown-link w-dropdown-link w--current">Hosting &amp; Performance</a></nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Why Jraft</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress.html" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix.html" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium.html" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you.html" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
-          </div><a href="pricing.html" class="nav-item w-nav-link">Pricing</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
+          </div><a href="pricing" class="nav-item w-nav-link">Pricing</a></nav>
       </div>
       <div class="div-block-1328">
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
@@ -175,7 +175,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
     </div>
     <div class="feature-detail-div">
-      <a href="create.html" class="div-block-134 w-inline-block">
+      <a href="create" class="div-block-134 w-inline-block">
         <div class="photo-class"><img src="images/Hosting-Comp-1.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" srcset="images/Hosting-Comp-1-p-500.jpeg 500w, images/Hosting-Comp-1-p-800.jpeg 800w, images/Hosting-Comp-1-p-1080.jpeg 1080w, images/Hosting-Comp-1.jpg 1600w" alt="Jraft&#x27;s collaborative editing software" class="image-21"></div>
         <div class="div-block-135">
           <h2 class="class-1">Writers &amp; Editors</h2>
@@ -184,7 +184,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="class-3">Creating content in the Editor</div><img src="images/path.svg" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="build.html" class="div-block-134 w-inline-block">
+      <a href="build" class="div-block-134 w-inline-block">
         <div class="photo-class"><img src="images/Hosting-Comp-2.jpg" loading="lazy" width="800" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 44vw, 47vw" srcset="images/Hosting-Comp-2-p-500.jpeg 500w, images/Hosting-Comp-2-p-800.jpeg 800w, images/Hosting-Comp-2-p-1080.jpeg 1080w, images/Hosting-Comp-2.jpg 1600w" alt="Jraft&#x27;s website builder software" class="image-22"></div>
         <div class="div-block-135">
           <h2 class="class-1">Publishers &amp; Designers</h2>
@@ -238,7 +238,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h3 class="heading-copy">Compare Jraft with</h3>
     </div>
     <div class="div-block-13">
-      <a href="vs/wordpress.html" class="compare-with-div-link-2 w-inline-block">
+      <a href="vs/wordpress" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
           <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
@@ -247,7 +247,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="text-block-5">Open-source, but needs extensive customisation, plugins, custom development work, and ongoing maintenance.</div>
       </a>
       <div class="div-block-30"></div>
-      <a href="vs/wix.html" class="compare-with-div-link-2 w-inline-block">
+      <a href="vs/wix" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
           <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
@@ -260,28 +260,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="feature-bounding-box other-features-1">
     <h2 class="heading-10">All features</h2>
     <div class="div-block-1397">
-      <a href="manage.html" class="other-features-parent w-inline-block">
+      <a href="manage" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Workflow_1.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Workflow</h4>
           <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
         </div>
       </a>
-      <a href="build.html" class="other-features-parent w-inline-block">
+      <a href="build" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Build</h4>
           <div class="text-block-45">The fastest hosting you&#x27;ll find on the internet.</div>
         </div>
       </a>
-      <a href="create.html" class="other-features-parent w-inline-block">
+      <a href="create" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Edit.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Write</h4>
           <div class="text-block-45">Write articles collaboratively and visually.</div>
         </div>
       </a>
-      <a href="engagement.html" class="other-features-parent w-inline-block">
+      <a href="engagement" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Engagement</h4>
@@ -293,7 +293,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="div-block-1444">
         <h3 class="text-block-8">Priced to scale with your publication</h3>
         <div class="text-block-9">Start publishing for free, then get a plan to link a custom domain</div>
-      </div><a href="pricing.html" class="button square-blackbg w-button">View Pricing</a></div>
+      </div><a href="pricing" class="button square-blackbg w-button">View Pricing</a></div>
   </div>
   <div id="Footer-CTA" class="pre-footer">
     <div class="pre-footer-parent">
@@ -301,7 +301,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div>
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
-        </div><a href="pricing.html" class="button square-corners left-align w-button">View pricing</a></div>
+        </div><a href="pricing" class="button square-corners left-align w-button">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
@@ -327,12 +327,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="manage.html" class="footer-text">Workflow</a></li>
-            <li><a href="create.html" class="footer-text">Editor</a></li>
-            <li><a href="build.html" class="footer-text">Builder</a></li>
-            <li><a href="engagement.html" class="footer-text">Engage &amp; Earn</a></li>
-            <li><a href="hosting.html" aria-current="page" class="footer-text w--current">Hosting &amp; Performance</a></li>
-            <li><a href="pricing.html" class="footer-text">Pricing</a></li>
+            <li><a href="manage" class="footer-text">Workflow</a></li>
+            <li><a href="create" class="footer-text">Editor</a></li>
+            <li><a href="build" class="footer-text">Builder</a></li>
+            <li><a href="engagement" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="hosting" aria-current="page" class="footer-text w--current">Hosting &amp; Performance</a></li>
+            <li><a href="pricing" class="footer-text">Pricing</a></li>
           </ul>
         </div>
         <div class="footer-div hidden">
@@ -347,10 +347,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="vs/wordpress.html" class="footer-text">WordPress</a></li>
-            <li><a href="vs/wix.html" class="footer-text">Wix</a></li>
-            <li><a href="vs/medium.html" class="footer-text">Medium</a></li>
-            <li><a href="vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a></li>
+            <li><a href="vs/wordpress" class="footer-text">WordPress</a></li>
+            <li><a href="vs/wix" class="footer-text">Wix</a></li>
+            <li><a href="vs/medium" class="footer-text">Medium</a></li>
+            <li><a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a></li>
           </ul>
         </div>
       </div>
@@ -361,7 +361,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
 </body>
 </html>
