--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" aria-current="page" class="nav-logo-link w-nav-brand w--current"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index" aria-current="page" class="nav-logo-link w-nav-brand w--current"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -40,15 +40,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build.html" class="dropdown-link w-dropdown-link">Builder</a><a href="create.html" class="dropdown-link w-dropdown-link">Editor</a><a href="manage.html" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Why Jraft</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress.html" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix.html" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium.html" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you.html" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
-          </div><a href="pricing.html" class="nav-item w-nav-link">Pricing</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
+          </div><a href="pricing" class="nav-item w-nav-link">Pricing</a></nav>
       </div>
       <div class="div-block-1328">
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
@@ -99,7 +99,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="div-block-1431">
         <div class="div-block-1434">
           <h2 class="heading-19">Manage</h2>
-          <h3 class="heading-18">See your whole workflow at a glance. Ditch the spreadsheet and <a href="manage.html" class="landing-feature-link title-description">manage your editorial workflow 2x faster.</a></h3>
+          <h3 class="heading-18">See your whole workflow at a glance. Ditch the spreadsheet and <a href="manage" class="landing-feature-link title-description">manage your editorial workflow 2x faster.</a></h3>
         </div>
         <div data-w-id="092d83da-ade2-aca2-7647-7fc24e1f2e45" style="opacity:0" class="div-block-1432"><img src="images/Foyster-Media.svg" loading="lazy" alt="Foyster Media logo" class="image-59">
           <div class="text-block-54">&quot;Jraft is a game changer. Collaboration in Jraft knocks WordPress out of the park and lets us have a single source of truth.&quot;<br></div>
@@ -117,11 +117,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Article Board</h3>
-            <div class="text-block-55">Articles are grouped into drafts, for review and reviewed on an <a href="manage.html" class="landing-feature-link">interactive editorial workflow board</a>.</div>
+            <div class="text-block-55">Articles are grouped into drafts, for review and reviewed on an <a href="manage" class="landing-feature-link">interactive editorial workflow board</a>.</div>
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Calendar View</h3>
-            <div class="text-block-55">Schedule with context <a href="manage.html" class="landing-feature-link">on a full-screen calendar</a> that shows all your prior and future scheduled articles.</div>
+            <div class="text-block-55">Schedule with context <a href="manage" class="landing-feature-link">on a full-screen calendar</a> that shows all your prior and future scheduled articles.</div>
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Individualised Permissions</h3>
@@ -129,7 +129,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
         </div>
       </div>
-    </div><a href="manage.html" class="button-2 manager w-button">Explore Workflow Features</a></div>
+    </div><a href="manage" class="button-2 manager w-button">Explore Workflow Features</a></div>
   <div data-w-id="0a2bcf07-6b9f-b4b6-fab1-90625ead654e" class="div-block-1429">
     <div class="div-block-1430 builder">
       <div class="div-block-1431">
@@ -152,25 +152,25 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Designed for Publications</h3>
-            <div class="text-block-55"><a href="build.html" class="landing-feature-link">Jraft&#x27; Builder</a> introduces a component based approach which makes making publications simple.</div>
+            <div class="text-block-55"><a href="build" class="landing-feature-link">Jraft&#x27; Builder</a> introduces a component based approach which makes making publications simple.</div>
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Ultimate Performance</h3>
-            <div class="text-block-55"><a href="build.html" class="landing-feature-link">Optimised for SEO</a>, Jraft uses cutting-edge tech to make our publications load <a href="build.html" class="landing-feature-link">50% faster than the NY Times.</a></div>
+            <div class="text-block-55"><a href="build" class="landing-feature-link">Optimised for SEO</a>, Jraft uses cutting-edge tech to make our publications load <a href="build" class="landing-feature-link">50% faster than the NY Times.</a></div>
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">100+ customisable blocks</h3>
-            <div class="text-block-55">Jraft comes with <a href="build.html" class="landing-feature-link">over 100+ customisable blocks</a> to design your publication, or code your own.</div>
+            <div class="text-block-55">Jraft comes with <a href="build" class="landing-feature-link">over 100+ customisable blocks</a> to design your publication, or code your own.</div>
           </div>
         </div>
       </div>
-    </div><a href="build.html" class="button-2 builder w-button">Explore Builder Features</a></div>
+    </div><a href="build" class="button-2 builder w-button">Explore Builder Features</a></div>
   <div data-w-id="349a5e96-11eb-05f8-88dc-51ee09185b56" class="div-block-1429">
     <div class="div-block-1430 editor">
       <div class="div-block-1431">
         <div class="div-block-1434">
           <h2 class="heading-19">Write</h2>
-          <h3 class="heading-18"><a href="create.html" class="landing-feature-link title-description">Collaborative, visual editing:</a> the editor you&#x27;ve dreamt about.</h3>
+          <h3 class="heading-18"><a href="create" class="landing-feature-link title-description">Collaborative, visual editing:</a> the editor you&#x27;ve dreamt about.</h3>
         </div>
         <div data-w-id="349a5e96-11eb-05f8-88dc-51ee09185b5e" style="opacity:0" class="div-block-1432"><img src="images/NSW-Gov.svg" loading="lazy" alt="NSW Government Logo" class="image-59">
           <div class="text-block-54">&quot;Jraft essentially replaces our tech team and frees our content teams to focus on what they love.&quot;<br></div>
@@ -187,7 +187,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Collaborative Editing</h3>
-            <div class="text-block-55">The only CMS with <a href="create.html" class="landing-feature-link">collaborative editing</a> built in.</div>
+            <div class="text-block-55">The only CMS with <a href="create" class="landing-feature-link">collaborative editing</a> built in.</div>
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Insert Anything</h3>
@@ -195,11 +195,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Tools for Editors</h3>
-            <div class="text-block-55"><a href="create.html" class="landing-feature-link">Leave editor comments on articles</a>, see when alt-text is missing, &amp; approve articles for publication.</div>
+            <div class="text-block-55"><a href="create" class="landing-feature-link">Leave editor comments on articles</a>, see when alt-text is missing, &amp; approve articles for publication.</div>
           </div>
         </div>
       </div>
-    </div><a href="create.html" class="button-2 editor w-button">Explore Editor Features</a></div>
+    </div><a href="create" class="button-2 editor w-button">Explore Editor Features</a></div>
   <div data-w-id="3d0820f6-eb4b-a6de-c0c3-a80106404f4b" class="div-block-1429">
     <div class="div-block-1430 engagement">
       <div class="div-block-1431">
@@ -223,7 +223,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="div-block-1436">
           <div class="div-block-1435">
             <h3 class="heading-17">Infinity scroll</h3>
-            <div class="text-block-55">On average, readers consume 20% more content using <a href="engagement.html" class="landing-feature-link">infinity scroll</a>, meaning you earn 20% more from ads.</div>
+            <div class="text-block-55">On average, readers consume 20% more content using <a href="engagement" class="landing-feature-link">infinity scroll</a>, meaning you earn 20% more from ads.</div>
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Perfect SEO, built in</h3>
@@ -231,17 +231,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </div>
           <div class="div-block-1435">
             <h3 class="heading-17">Flexible integrations</h3>
-            <div class="text-block-55"><a href="engagement.html" class="landing-feature-link">Connect your marketing tools</a> with built-in integrations and the flexibility of custom code.</div>
+            <div class="text-block-55"><a href="engagement" class="landing-feature-link">Connect your marketing tools</a> with built-in integrations and the flexibility of custom code.</div>
           </div>
         </div>
       </div>
-    </div><a href="engagement.html" class="button-2 engagement w-button">Explore Engagement Features</a></div>
+    </div><a href="engagement" class="button-2 engagement w-button">Explore Engagement Features</a></div>
   <div class="div-block-1429 end">
     <div class="div-block-1442">
       <div class="div-block-1443"><img src="images/AWS.svg" loading="lazy" alt="Amazon Web Services Logo" class="image-61">
         <div>
           <h4 class="heading-20">Powered by Amazon Web Services</h4>
-          <div class="text-block-57">Built to scale, using the same network as Netflix, Pinterest, Airbnb, Slack, and Adobe. <a href="hosting.html" class="landing-feature-link">Jraft scales from the first visitors to first million — instantly</a>.</div>
+          <div class="text-block-57">Built to scale, using the same network as Netflix, Pinterest, Airbnb, Slack, and Adobe. <a href="hosting" class="landing-feature-link">Jraft scales from the first visitors to first million — instantly</a>.</div>
         </div>
       </div>
       <div class="div-block-1443"><img src="images/image--reference.svg" loading="lazy" alt="" class="image-61">
@@ -264,7 +264,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div>
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
-        </div><a href="pricing.html" class="button square-corners left-align w-button">View pricing</a></div>
+        </div><a href="pricing" class="button square-corners left-align w-button">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
@@ -290,12 +290,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="manage.html" class="footer-text">Workflow</a></li>
-            <li><a href="create.html" class="footer-text">Editor</a></li>
-            <li><a href="build.html" class="footer-text">Builder</a></li>
-            <li><a href="engagement.html" class="footer-text">Engage &amp; Earn</a></li>
-            <li><a href="hosting.html" class="footer-text">Hosting &amp; Performance</a></li>
-            <li><a href="pricing.html" class="footer-text">Pricing</a></li>
+            <li><a href="manage" class="footer-text">Workflow</a></li>
+            <li><a href="create" class="footer-text">Editor</a></li>
+            <li><a href="build" class="footer-text">Builder</a></li>
+            <li><a href="engagement" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="hosting" class="footer-text">Hosting &amp; Performance</a></li>
+            <li><a href="pricing" class="footer-text">Pricing</a></li>
           </ul>
         </div>
         <div class="footer-div hidden">
@@ -310,10 +310,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="vs/wordpress.html" class="footer-text">WordPress</a></li>
-            <li><a href="vs/wix.html" class="footer-text">Wix</a></li>
-            <li><a href="vs/medium.html" class="footer-text">Medium</a></li>
-            <li><a href="vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a></li>
+            <li><a href="vs/wordpress" class="footer-text">WordPress</a></li>
+            <li><a href="vs/wix" class="footer-text">Wix</a></li>
+            <li><a href="vs/medium" class="footer-text">Medium</a></li>
+            <li><a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a></li>
           </ul>
         </div>
       </div>
@@ -324,7 +324,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
 </body>
 </html>
