--- a/pricing.html
+++ b/pricing.html
@@ -32,7 +32,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap"><a href="index" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -40,15 +40,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build.html" class="dropdown-link w-dropdown-link">Builder</a><a href="create.html" class="dropdown-link w-dropdown-link">Editor</a><a href="manage.html" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engagement" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Why Jraft</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress.html" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix.html" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium.html" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you.html" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
-          </div><a href="pricing.html" aria-current="page" class="nav-item w-nav-link w--current">Pricing</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
+          </div><a href="pricing" aria-current="page" class="nav-item w-nav-link w--current">Pricing</a></nav>
       </div>
       <div class="div-block-1328">
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
@@ -83,7 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pricing-table-title-parent">
       <h1 class="pricing-table-title">Dead simple pricing.</h1>
       <h3 class="pricing-table-subhead">Unlimited, Elite Performance Hosting.</h3>
-      <div class="pricing-table-description">Forget metered usage: unlike other hosts, Jraft charges by user, not by bandwidth.<span class="pricing-table-descript"> Half the price of a WordPress plugin, and </span><a href="vs/what-wordpress-really-costs-you.html" class="blog-link"><span class="pricing-table-descript">5x cheaper than a comparable WordPress deployment</span></a><span class="pricing-table-descript"> with hosting that&#x27;s twice the performance of our nearest competitor.</span></div>
+      <div class="pricing-table-description">Forget metered usage: unlike other hosts, Jraft charges by user, not by bandwidth.<span class="pricing-table-descript"> Half the price of a WordPress plugin, and </span><a href="vs/what-wordpress-really-costs-you" class="blog-link"><span class="pricing-table-descript">5x cheaper than a comparable WordPress deployment</span></a><span class="pricing-table-descript"> with hosting that&#x27;s twice the performance of our nearest competitor.</span></div>
     </div>
     <div class="row sticky">
       <div class="content-parent">
@@ -526,7 +526,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div>
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
-        </div><a href="pricing.html" aria-current="page" class="button square-corners left-align w-button w--current">View pricing</a></div>
+        </div><a href="pricing" aria-current="page" class="button square-corners left-align w-button w--current">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
@@ -552,12 +552,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="manage.html" class="footer-text">Workflow</a></li>
-            <li><a href="create.html" class="footer-text">Editor</a></li>
-            <li><a href="build.html" class="footer-text">Builder</a></li>
-            <li><a href="engagement.html" class="footer-text">Engage &amp; Earn</a></li>
-            <li><a href="hosting.html" class="footer-text">Hosting &amp; Performance</a></li>
-            <li><a href="pricing.html" aria-current="page" class="footer-text w--current">Pricing</a></li>
+            <li><a href="manage" class="footer-text">Workflow</a></li>
+            <li><a href="create" class="footer-text">Editor</a></li>
+            <li><a href="build" class="footer-text">Builder</a></li>
+            <li><a href="engagement" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="hosting" class="footer-text">Hosting &amp; Performance</a></li>
+            <li><a href="pricing" aria-current="page" class="footer-text w--current">Pricing</a></li>
           </ul>
         </div>
         <div class="footer-div hidden">
@@ -572,10 +572,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="vs/wordpress.html" class="footer-text">WordPress</a></li>
-            <li><a href="vs/wix.html" class="footer-text">Wix</a></li>
-            <li><a href="vs/medium.html" class="footer-text">Medium</a></li>
-            <li><a href="vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a></li>
+            <li><a href="vs/wordpress" class="footer-text">WordPress</a></li>
+            <li><a href="vs/wix" class="footer-text">Wix</a></li>
+            <li><a href="vs/medium" class="footer-text">Medium</a></li>
+            <li><a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a></li>
           </ul>
         </div>
       </div>
@@ -586,7 +586,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
   <!-- These Loads Scripts -->
   <script src="https://unpkg.com/popper.js@1"></script>
