--- a/vs/medium.html
+++ b/vs/medium.html
@@ -32,7 +32,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="../index.html" class="nav-logo-link w-nav-brand"><img src="../images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap"><a href="../index" class="nav-logo-link w-nav-brand"><img src="../images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -40,15 +40,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="../build.html" class="dropdown-link w-dropdown-link">Builder</a><a href="../create.html" class="dropdown-link w-dropdown-link">Editor</a><a href="../manage.html" class="dropdown-link w-dropdown-link">Workflow</a><a href="../engagement.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="../hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="../build" class="dropdown-link w-dropdown-link">Builder</a><a href="../create" class="dropdown-link w-dropdown-link">Editor</a><a href="../manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="../engagement" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="../hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Why Jraft</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="../vs/wordpress.html" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="../vs/wix.html" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="../vs/medium.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Jraft vs Medium</a><a href="../vs/what-wordpress-really-costs-you.html" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
-          </div><a href="../pricing.html" class="nav-item w-nav-link">Pricing</a></nav>
+            <nav class="dropdown-list w-dropdown-list"><a href="../vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="../vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="../vs/medium" aria-current="page" class="dropdown-link w-dropdown-link w--current">Jraft vs Medium</a><a href="../vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
+          </div><a href="../pricing" class="nav-item w-nav-link">Pricing</a></nav>
       </div>
       <div class="div-block-1328">
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
@@ -95,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1445"><img src="../images/Smiley.svg" loading="lazy" alt="" class="image-65">
         <h2 class="heading-21">5x cheaper than a comparable WordPress deployment.</h2>
-        <div class="text-block-58">Jraft is ~5x less expensive than a comparable WordPress deployment, starting at $6.90/month or $69/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you.html" class="blog-link">here.</a></div>
+        <div class="text-block-58">Jraft is ~5x less expensive than a comparable WordPress deployment, starting at $6.90/month or $69/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a></div>
       </div>
     </div>
   </div>
@@ -202,14 +202,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="feature-bounding-box other-features-1">
     <h2 class="heading-10">More comparisons</h2>
     <div class="div-block-1397">
-      <a href="../vs/medium.html" aria-current="page" class="other-features-parent comparisons w-inline-block w--current">
+      <a href="../vs/medium" aria-current="page" class="other-features-parent comparisons w-inline-block w--current">
         <div class="other-image-parent comparison"><img src="../images/word-press-logo.svg" loading="lazy" alt="" class="image-66"></div>
         <div class="div-block-1400">
           <h4 class="heading-11 comparisons">WordPress</h4>
           <div class="text-block-45">With powerful collaboration features, comparing Jraft and WordPress is like comparing Notepad and Google Docs.</div>
         </div>
       </a>
-      <a href="../vs/wix.html" class="other-features-parent comparisons w-inline-block">
+      <a href="../vs/wix" class="other-features-parent comparisons w-inline-block">
         <div class="other-image-parent comparison"><img src="../images/wix-logo.svg" loading="lazy" alt="" class="image-66"></div>
         <div class="div-block-1400">
           <h4 class="heading-11 comparisons">Wix</h4>
@@ -227,7 +227,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div>
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
-        </div><a href="../pricing.html" class="button square-corners left-align w-button">View pricing</a></div>
+        </div><a href="../pricing" class="button square-corners left-align w-button">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
@@ -253,12 +253,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="../manage.html" class="footer-text">Workflow</a></li>
-            <li><a href="../create.html" class="footer-text">Editor</a></li>
-            <li><a href="../build.html" class="footer-text">Builder</a></li>
-            <li><a href="../engagement.html" class="footer-text">Engage &amp; Earn</a></li>
-            <li><a href="../hosting.html" class="footer-text">Hosting &amp; Performance</a></li>
-            <li><a href="../pricing.html" class="footer-text">Pricing</a></li>
+            <li><a href="../manage" class="footer-text">Workflow</a></li>
+            <li><a href="../create" class="footer-text">Editor</a></li>
+            <li><a href="../build" class="footer-text">Builder</a></li>
+            <li><a href="../engagement" class="footer-text">Engage &amp; Earn</a></li>
+            <li><a href="../hosting" class="footer-text">Hosting &amp; Performance</a></li>
+            <li><a href="../pricing" class="footer-text">Pricing</a></li>
           </ul>
         </div>
         <div class="footer-div hidden">
@@ -273,10 +273,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="footer-div">
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="../vs/wordpress.html" class="footer-text">WordPress</a></li>
-            <li><a href="../vs/wix.html" class="footer-text">Wix</a></li>
-            <li><a href="../vs/medium.html" aria-current="page" class="footer-text w--current">Medium</a></li>
-            <li><a href="../vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a></li>
+            <li><a href="../vs/wordpress" class="footer-text">WordPress</a></li>
+            <li><a href="../vs/wix" class="footer-text">Wix</a></li>
+            <li><a href="../vs/medium" aria-current="page" class="footer-text w--current">Medium</a></li>
+            <li><a href="../vs/wordpress" class="footer-text">WordPress: Hidden Costs</a></li>
           </ul>
         </div>
       </div>
@@ -287,7 +287,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="../js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
 </body>
 </html>
