Fixed manager hero spacing

--- a/create.html
+++ b/create.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Oct 17 2020 01:57:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 18 2020 02:32:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd11de72a337ecd56808c" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -187,7 +187,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="text-block-38">For SEO best practice, alt-text needs to be applied to images. Albion visually shows you which images don&#x27;t have alt text so you never forget to add alt-text to images again.<span class="emphasise"></span></div>
         </div>
       </div>
-      <div class="div-block-1386 editor-features"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="474" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="editor-editors-photos _3"><img src="images/Meta-Controls.png" loading="lazy" width="504" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Meta-Controls-p-500.png 500w, images/Meta-Controls-p-800.png 800w, images/Meta-Controls.png 1008w" alt="Jraft&#x27;s article management functionality in the editor" class="editor-editors-photos _2"><img src="images/1-Comments.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/1-Comments-p-500.png 500w, images/1-Comments-p-800.png 800w, images/1-Comments-p-1080.png 1080w, images/1-Comments.png 1206w" alt="Leaving editor comments in the editor for draft articles" class="editor-editors-photos _1">
+      <div class="div-block-1386 editor-features"><img src="images/Editor-Missing-Alt-Text.png" loading="lazy" width="474" sizes="(max-width: 767px) 100vw, 56vw" srcset="images/Editor-Missing-Alt-Text-p-500.png 500w, images/Editor-Missing-Alt-Text-p-800.png 800w, images/Editor-Missing-Alt-Text.png 948w" alt="Jraft&#x27;s editor showing a visual indicator for missing alt text" class="editor-editors-photos _3"><img src="images/Meta-Controls.png" loading="lazy" width="504" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/Meta-Controls-p-500.png 500w, images/Meta-Controls-p-800.png 800w, images/Meta-Controls.png 1008w" alt="Jraft&#x27;s article management functionality in the editor" class="editor-editors-photos _2"><img src="images/1-Comments.png" loading="lazy" width="603" sizes="(max-width: 767px) 100vw, (max-width: 991px) 47vw, 46vw" srcset="images/1-Comments-p-500.png 500w, images/1-Comments-p-800.png 800w, images/1-Comments-p-1080.png 1080w, images/1-Comments.png 1206w" alt="Leaving editor comments in the editor for draft articles" class="editor-editors-photos _1">
         <div class="photo-bg-colour editor-2"></div>
       </div>
     </div>
