--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Oct 17 2020 01:57:27 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Oct 18 2020 02:32:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -305,7 +305,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="_1st-column">
           <div class="div-block-1338">
             <h3 class="pricing-feat-detail">Multi-publication support (upcoming)</h3>
-            <div data-tippy-content="Create an unlimited amount of publications on a single plan. Yep. Still unlimited bandwidth." data-w-id="610fa252-ec83-0361-2e92-779e72004cd5" class="tippy"><img src="images/More-Info.svg" loading="lazy" alt="" class="image-36"></div>
+            <div data-tippy-content="Create up to 3 publications on a single plan. Yep. Still unlimited bandwidth. For more, contact enterprise sales." data-w-id="610fa252-ec83-0361-2e92-779e72004cd5" class="tippy"><img src="images/More-Info.svg" loading="lazy" alt="" class="image-36"></div>
           </div>
         </div>
         <div class="line"></div>
