--- a/hosting.html
+++ b/hosting.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Oct 18 2020 02:32:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 19 2020 01:29:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6dd0308edc68c3868b89a7" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -299,7 +299,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-footer-parent">
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
-          <h2 class="heading-12">Half the price of a WordPress plugin</h2>
+          <h2 class="heading-12">The price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
         </div><a href="pricing" class="button square-corners left-align w-button">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
