--- a/vs/what-wordpress-really-costs-you.html
+++ b/vs/what-wordpress-really-costs-you.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Oct 18 2020 02:32:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 19 2020 01:29:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f79b0f7dd39a415fb3d2032" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -381,7 +381,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="wordpress-comparison-table emphasis">$352-$4610/Y</div>
             </div>
             <div class="cell-div comparison-tables">
-              <div class="wordpress-comparison-table emphasis">$69/Y/seat</div>
+              <div class="wordpress-comparison-table emphasis">$143/Y</div>
             </div>
           </div>
         </div>
@@ -412,9 +412,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="div-block-1418">
     <div class="blog-parent-div">
       <p class="paragraph">As the founder of Jraft, I highly encourage you to at least <em>scan</em> this entire post to understand where I&#x27;m getting these numbers. In saying, even in leaving the intangibles out of the picture, here&#x27;s the total cost of ownership for one year on Jraft and WordPress</p>
-      <p class="paragraph">Jraft (4 seats) = <span class="semi-bold">$276 USD annually</span></p>
+      <p class="paragraph">Jraft (3 seats) = <span class="semi-bold">$143 USD annually</span></p>
       <p class="paragraph">WordPress (hosting + CDN + ACF + visual builder) = <span class="semi-bold">$352 USD-4,170 USD annually</span></p>
-      <p class="paragraph">The most comparable platform to Jraft is actually something called <a href="https://newspack.pub/" target="_blank" class="link-6">WordPress Newspack</a> — a plugin developed by WordPress to change WordPress to do the same thing as Jraft (we think Jraft does it better though). <span class="semi-bold">NewsPack costs a stomach churning $6,000/Y on their lowest tier.</span> And that&#x27;s not including the same plugins you&#x27;ll still have to pay for, detailed above.</p>
+      <p class="paragraph">The most comparable platform to Jraft is actually something called <a href="https://newspack.pub/" target="_blank" class="blog-link">WordPress Newspack</a> — a plugin developed by WordPress to change WordPress to do the same thing as Jraft (we think Jraft does it better though). <span class="semi-bold">NewsPack costs a stomach churning $6,000/Y on their lowest tier.</span> And that&#x27;s not including the same plugins you&#x27;ll still have to pay for, detailed above.</p>
       <h3 class="blog-headings h3">So, about plugins...</h3>
       <p class="paragraph">The fact is, when you&#x27;re hosting with WordPress and Jraft, you&#x27;re not <em>just </em>paying for hosting.</p>
       <p class="paragraph">You&#x27;re also paying for the design, workflow, and SEO tools each offers. And the content management systems that are packaged with them.</p>
@@ -523,7 +523,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-footer-parent">
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
-          <h2 class="heading-12">Half the price of a WordPress plugin</h2>
+          <h2 class="heading-12">The price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
         </div><a href="../pricing" class="button square-corners left-align w-button">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
