--- a/vs/wix.html
+++ b/vs/wix.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sun Oct 18 2020 02:32:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 19 2020 01:29:51 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7ace6a19656db585edef80" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -90,12 +90,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="comparison-feature">
     <div class="feature-bounding-box comparison _1">
       <div class="div-block-1445"><img src="../images/Migration.svg" loading="lazy" alt="" class="image-65">
-        <h2 class="heading-21">Make the switch to Jraft in minutes using our WordPress plugin</h2>
-        <div class="text-block-58">Have a publication on WordPress with thousands of posts? Don&#x27;t worry about losing any content when you migrate to Jraft.<br><br>Easily migrate your content to Jraft using our native WordPress migration plugin. Its time to experience a better publishing experience.</div>
+        <h2 class="heading-21">Make the switch to Jraft in minutes by importing your content</h2>
+        <div class="text-block-58">Have a publication on WordPress with thousands of posts? Don&#x27;t worry about losing any content when you migrate to Jraft.<br><br>Easily migrate your content to Jraft by importing your existing content in a single, JSON file. Its time to experience a better publishing experience.</div>
       </div>
       <div class="div-block-1445"><img src="../images/Smiley.svg" loading="lazy" alt="" class="image-65">
-        <h2 class="heading-21">5x cheaper than a comparable WordPress deployment.</h2>
-        <div class="text-block-58">Jraft is ~5x less expensive than a comparable WordPress deployment, starting at $6.90/month or $69/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a></div>
+        <h2 class="heading-21">Half the price of a comparable WordPress deployment.</h2>
+        <div class="text-block-58">Jraft is around half the price of a comparable WordPress deployment, starting at $11.90/month or $119/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a></div>
       </div>
     </div>
   </div>
@@ -259,7 +259,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-footer-parent">
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
-          <h2 class="heading-12">Half the price of a WordPress plugin</h2>
+          <h2 class="heading-12">The price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
         </div><a href="../pricing" class="button square-corners left-align w-button">View pricing</a></div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
