--- a/pricing.html
+++ b/pricing.html
@@ -83,7 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pricing-table-title-parent">
       <h1 class="pricing-table-title">Dead simple pricing.</h1>
       <h3 class="pricing-table-subhead">Unlimited, Elite Performance Hosting.</h3>
-      <div class="pricing-table-description">Forget metered usage: unlike other hosts, Jraft charges by user, not by bandwidth.<span class="pricing-table-descript"> Half the price of a WordPress plugin, and </span><a href="vs/what-wordpress-really-costs-you" class="blog-link"><span class="pricing-table-descript">5x cheaper than a comparable WordPress deployment</span></a><span class="pricing-table-descript"> with hosting that&#x27;s twice the performance of our nearest competitor.</span></div>
+      <div class="pricing-table-description">Forget metered usage: unlike other hosts, Jraft charges by user, not by bandwidth.<span class="pricing-table-descript"> Half the price of a WordPress plugin, and </span><a href="vs/what-wordpress-really-costs-you" class="blog-link"><span class="pricing-table-descript">half the price of a comparable WordPress deployment</span></a><span class="pricing-table-descript"> with hosting that&#x27;s twice the performance of our nearest competitor.</span></div>
     </div>
     <div class="row sticky">
       <div class="content-parent">
