--- a/pricing.html
+++ b/pricing.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 20 2020 03:58:30 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 02:34:20 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Plans &amp; Pricing | Jraft</title>
-  <meta content="Free. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to get start a professional publication with Jraft, and it&#x27;s free forever. $6.90USD. Per month billed annually, or $11 billed monthly. Remove the Jraft logo and unlock multi-publication support. $12.90USD. Per month billed annually, or $20 billed monthly." name="description">
+  <meta content="Free. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to get start a professional publication with Jraft, and it&#x27;s free forever. $14.90USD. Per month billed annually, or $21 billed monthly. Remove the Jraft logo and unlock multi-publication support. $33.90USD. Per month billed annually, or $48 billed monthly." name="description">
   <meta content="Plans &amp; Pricing | Jraft" property="og:title">
-  <meta content="Free. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to get start a professional publication with Jraft, and it&#x27;s free forever. $6.90USD. Per month billed annually, or $11 billed monthly. Remove the Jraft logo and unlock multi-publication support. $12.90USD. Per month billed annually, or $20 billed monthly." property="og:description">
+  <meta content="Free. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to get start a professional publication with Jraft, and it&#x27;s free forever. $14.90USD. Per month billed annually, or $21 billed monthly. Remove the Jraft logo and unlock multi-publication support. $33.90USD. Per month billed annually, or $48 billed monthly." property="og:description">
   <meta content="Plans &amp; Pricing | Jraft" property="twitter:title">
-  <meta content="Free. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to get start a professional publication with Jraft, and it&#x27;s free forever. $6.90USD. Per month billed annually, or $11 billed monthly. Remove the Jraft logo and unlock multi-publication support. $12.90USD. Per month billed annually, or $20 billed monthly." property="twitter:description">
+  <meta content="Free. No credit card required, no trial period. Unlimited, elite performance hosting. Everything you need to get start a professional publication with Jraft, and it&#x27;s free forever. $14.90USD. Per month billed annually, or $21 billed monthly. Remove the Jraft logo and unlock multi-publication support. $33.90USD. Per month billed annually, or $48 billed monthly." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -121,19 +121,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="cell-div pricing-details">
             <div class="table-plan-content-parent-squared">
               <div class="div-block-1329">
-                <div class="pricing-price">$12.90</div>
+                <div class="pricing-price">$14.90</div>
                 <div class="price-m">USD/user</div>
               </div>
-              <div class="plan-description monthly-price">per month, paid annually, or $19 paid monthly</div>
+              <div class="plan-description monthly-price">per month, paid annually, or $21 paid monthly</div>
               <div class="plan-description">Best for a small blog that doesn&#x27;t need advanced features.</div>
             </div><a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a></div>
           <div class="cell-div pricing-details">
             <div class="table-plan-content-parent-squared">
               <div class="div-block-1329">
-                <div class="pricing-price">$24.90</div>
+                <div class="pricing-price">$33.90</div>
                 <div class="price-m">USD/user</div>
               </div>
-              <div class="plan-description monthly-price">per month, paid annually, or $36 paid monthly</div>
+              <div class="plan-description monthly-price">per month, paid annually, or $48 paid monthly</div>
               <div class="plan-description">For larger, multi site publications or those seeking advanced features</div>
             </div><a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a></div>
         </div>
@@ -400,7 +400,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-cta _1">
       <div class="div-block-1335">
         <h3 class="pre-cta-title">Students and Non-Profits</h3>
-        <div class="pre-cta-content">For student publications and nonprofits, Jraft offers unlimited seats on our Plus plan for $20/month, <strong>so a ~99% discount</strong>.<br></div>
+        <div class="pre-cta-content">For student publications and nonprofits, Jraft offers unlimited seats on our Plus plan for just $14/month, <strong>so a ~99% discount</strong>.<br></div>
       </div>
       <div class="button-parent"><a href="mailto:hello@tryjraft.com?subject=Student%20Discount" class="button square-corners w-button">Contact Us<br></a></div>
     </div>
