--- a/vs/wordpress.html
+++ b/vs/wordpress.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Tue Oct 20 2020 03:58:30 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Oct 21 2020 02:30:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f730f6fbd37202a4a0633fc" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -78,7 +78,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </div>
   <div class="comparison-hero">
     <div class="div-block-1416">
-      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 40vw, 41vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
+      <div class="div-block-1427"><img src="../images/Editor-Comp.png" loading="eager" width="1120" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 859.796875px, 87vw" srcset="../images/Editor-Comp-p-500.png 500w, ../images/Editor-Comp-p-800.png 800w, ../images/Editor-Comp-p-1080.png 1080w, ../images/Editor-Comp-p-1600.png 1600w, ../images/Editor-Comp-p-2000.png 2000w, ../images/Editor-Comp.png 2240w" alt="Jraft&#x27;s collaborative editor in action" class="image-58"></div>
       <div class="div-block-1419">
         <div class="div-block-1428">
           <h1 class="heading-16">Jraft vs Wordpress</h1>
@@ -95,7 +95,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </div>
       <div class="div-block-1445"><img src="../images/Smiley.svg" loading="lazy" alt="" class="image-65">
         <h2 class="heading-21">Half the price of a comparable WordPress deployment.</h2>
-        <div class="text-block-58">Jraft is around half the price of a comparable WordPress deployment, starting at $12.90/month or $129/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a></div>
+        <div class="text-block-58">Jraft is around half the price of a comparable WordPress deployment, starting at $12.90/month or $149/year. For comparable WordPress deployment, you would have to spend a minimum of $352-$500/year. Additionally, features like real-time editing are impossible to implement in WordPress.<br><br>Read how we calculated this figure <a href="../vs/what-wordpress-really-costs-you" class="blog-link">here.</a></div>
       </div>
     </div>
   </div>
